* Layout fixes
* Fixes for undo/redo
* Fixes for copy and paste of cells with extra width

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Appearance fix when clicking a single cell: doesn't
  look like a selection in the row/column headers anymore.
* Allow to change the number format for an empty cell.
* Pressing Enter in the edit widget without changing the
  value doesn't clear the cell anymore.

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo/Redo on column/row resizing
* Implemented Undo/Redo on clear cell
* Another fix for merged cells (conditionnal formatting).

2000-08-19-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for merging cells
* Fixed repainting problem when unmerging
* Fixed undo on clear cell

Summary 2000-08-19 -> 2000-08-22
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo For "Find and Replace"
* Implemented Undo For "Insert->series"
* Bug fix in kspread_dlg_series
* Undo works when I clear and used "find and replace" on entire row/col
* Undo works again when I changed table name

Summary 2000-08-22 -> 2000-08-25
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo When you used "Check Spelling"
* Fix bug when you used "Split View" :
-"Preference" works
-"Show table" works
-"Hide table" works

2000-08-25-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you used "Split view"
-"Remove table" works
-"change table" works

2000-08-72-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Fix bug when you changed table in "Split view" mode
-when you used kspread_dlg_formula
-when you used kspread_dlg_reference
*Fix bug when you moved on hyperlink